Se cambió la contraseña del usuario de base de datos en el archivo .env

--- a/.env
+++ b/.env
@@ -3,4 +3,4 @@ DB_HOST=localhost
 DB_PORT=5432
 DB_NAME=consultorio-pediatrico
 DB_USER=postgres
-DB_PASSWORD=D3v310p34*DF5
+DB_PASSWORD=D3v310p34*DF$
