--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     networks:
       - consultorio_network
     environment:
-      - DB_HOST=db
+      - DB_HOST=${DB_HOST}
       - DB_PORT=${DB_PORT}
       - DB_NAME=${DB_NAME}
       - DB_USER=${DB_USER}
@@ -22,9 +22,9 @@ services:
     container_name: consultorio-db
     restart: always
     environment:
-      POSTGRES_USER: ${DB_USER}
-      POSTGRES_PASSWORD: ${DB_PASSWORD}
-      POSTGRES_DB: ${DB_NAME}
+      POSTGRES_USER: ${}
+      POSTGRES_PASSWORD: D3v310p34*DF$
+      POSTGRES_DB: consultorio-pediatrico
     ports:
       - "5432:5432"
     networks:
@@ -38,7 +38,7 @@ services:
     container_name: frontend-consultorio
     restart: always
     ports:
-      - "8080:80"
+      - "8383:80"
     networks:
       - consultorio_network
     depends_on:
